@@ -1058,11 +1058,71 @@ public:
     yarp::sig::Matrix getHCOM(unsigned int iLink);
 
 
-    //---------------
-	// mass matrix
-	//---------------
+    //---------------------------
+	// Lagrange Formulation
+	//---------------------------
 
-    yarp::sig::Matrix TESTING_computeMassMatrix();
+    /**
+    * Compute the joint space mass matrix considering only the active joints.
+    * @return a DOF-by-DOF symmetric positive-definite matrix
+    */
+    yarp::sig::Matrix computeMassMatrix();
+
+    /**
+    * Compute the joint space mass matrix considering only the active joints.
+    * @param q vector of the active joint positions
+    * @return a DOF-by-DOF symmetric positive-definite matrix
+    */
+    yarp::sig::Matrix computeMassMatrix(const yarp::sig::Vector& q);
+
+    /**
+    * Compute the torques due to centrifugal and coriolis effects considering only the active joints.
+    * @return a DOF-dim vector
+    */
+    yarp::sig::Vector computeCcTorques();
+
+    /**
+    * Compute the torques due to centrifugal and coriolis effects considering only the active joints.
+    * @param q vector of the active joint positions
+    * @param dq vector of the active joint velocities
+    * @return a DOF-dim vector
+    */
+    yarp::sig::Vector computeCcTorques(const yarp::sig::Vector& q, const yarp::sig::Vector& dq);
+
+    /**
+    * Compute the torques generated by gravity considering only the active joints.
+    * @param ddp0 a vector that is equal and opposite to gravity expressed in the base reference frame (not the 0th frame)
+    * @return a DOF-dim vector
+    * @note After calling this method the NewtonEulerMode is set to STATIC
+    */
+    yarp::sig::Vector computeGravityTorques(const yarp::sig::Vector& ddp0);
+
+    /**
+    * Compute the torques generated by gravity considering only the active joints.
+    * @param ddp0 a vector that is equal and opposite to gravity expressed in the base reference frame (not the 0th frame)
+    * @param q vector of the active joint positions
+    * @return a DOF-dim vector
+    * @note After calling this method the NewtonEulerMode is set to STATIC
+    */
+    yarp::sig::Vector computeGravityTorques(const yarp::sig::Vector& ddp0, const yarp::sig::Vector& q);
+
+    /**
+    * Compute the torques generated by gravity and centrifugal and coriolis forces, considering only the active joints.
+    * @param ddp0 a vector that is equal and opposite to gravity expressed in the base reference frame (not the 0th frame)
+    * @return a DOF-dim vector
+    * @note Calling this method is faster than calling computeGravityTorques and computeCcTorques subsequently.
+    */
+    yarp::sig::Vector computeCcGravityTorques(const yarp::sig::Vector& ddp0);
+
+    /**
+    * Compute the torques generated by gravity and centrifugal and coriolis forces, considering only the active joints.
+    * @param ddp0 a vector that is equal and opposite to gravity expressed in the base reference frame (not the 0th frame)
+    * @param q vector of the active joint positions
+    * @param dq vector of the active joint velocities
+    * @return a DOF-dim vector
+    * @note Calling this method is faster than calling computeGravityTorques and computeCcTorques subsequently.
+    */
+    yarp::sig::Vector computeCcGravityTorques(const yarp::sig::Vector& ddp0, const yarp::sig::Vector& q, const yarp::sig::Vector& dq);
 
 
 
